Thu Feb 24 14:12:08 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/DB2_db.cc: Remove include of malloc.h, as it causes problems
	on some systems (e.g. Mac OS X), and all we need should be in stdlib.h.

Thu Feb 24 13:11:15 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htnet/HtFile.cc (Request): Don't append more than _max_document_size
	bytes to _contents string, set _content_length to size returned by
	stat().
	* htnet/HtHTTP.cc (HTTPRequest): Extra tests in case Content-Length
	not given for non-chunked input, and not to close persistent
	connection when chunked input exceeds _max_document_size.
	(ReadChunkedBody): Don't append more than _max_document_size bytes
	to _contents string.

Thu Feb 24 11:40:24 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag): Fix handling of img alt text to be consistent
	with body text, rather than keywords.
	* htdig/Retriever.cc (ctor): Treat alt text as plain text, until it has
	its own FLAG and factor.

Thu Feb 24 11:16:37 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (version): Moved example over to correct field.
	(defaults[] terminator): Padded zeros to new number of fields.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Thu Feb 24 19:08:41 2000  Loic Dachary  <loic@ceic.com>

	* htmerge/words.cc: only display Word in verbose message instead
	  of complete key if verbosity < 3.

Thu Feb 24 10:43:12 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (external_protocols, external_parser):
	Swapped these two entries to put them in alphabetical order.
	(star_blank): Fixed old typo (incorrect reference to image_star).
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Wed Feb 23 16:53:40 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (backlink_factor, external_parser,